Archive2/9b/d2e4fd6009f919/output
main.cpp:9:7: error: no viable conversion from 'int' to 'S'
    S s = 2;   
      ^   ~
main.cpp:3:8: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'int' to 'const S &' for 1st argument
struct S {
       ^
main.cpp:3:8: note: candidate constructor (the implicit move constructor) not viable: no known conversion from 'int' to 'S &&' for 1st argument
struct S {
       ^
1 error generated.
